# poor_mans_map_reduce

./: .gitignore  CMakeLists.txt  README.md
doc/: pmmr.tex
example_commonfriends/: CMakeLists.txt
example_commonfriends/src/: example_commonfriends.cpp
example_wordcount/: CMakeLists.txt
example_wordcount/src/: example_wordcount.cpp
include/pmmr/: execution_common.hpp  execution_parallel.hpp  execution_serial.hpp  hash_policy_automatic.hpp  pmmr.hpp  pmmr_main_class.hpp
test/: CMakeLists.txt
